docs: update files

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 								<li>CMS</li>
 								<li>Node.JS</li>
 								<li>React</li>
+                <li>Panoramic photo</li>
+                <li>Virtual tours</li>
 							</ul>
 						</li>
 						<li>
