--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<main class="resume">
 			<div class="column">
 				<section class="profile">
-					<article><h1>Igor Marchenko</h1></article>
+					<h2>Igor Marchenko</h2>
 					<p><em>Frontend developer</em></p>
 					<figure>
 						<img src="profile.jpg" alt="Igor Marchenko" />
@@ -27,7 +27,7 @@
 				</section>
 
 				<section class="contact">
-					<article><h2>Contact</h2></article>
+					<h2>Contact</h2>
 					<ul>
 						<li>
 							<i class="fas fa-mail-bulk"></i>
@@ -53,7 +53,7 @@
 				</section>
 
 				<section class="objectives">
-					<article><h2>About me</h2></article>
+					<h2>About me</h2>
 					<p>
 						My main aim is to gain knowledge to become a professional frontend
 						developer. I want to make successful career in this field. I’m focused on
@@ -63,7 +63,7 @@
 				</section>
 
 				<section class="skills">
-					<article><h2>Capabilities | Skills</h2></article>
+					<h2>Capabilities | Skills</h2>
 					<ul>
 						<li>
 							<h3>Professional</h3>
@@ -92,7 +92,7 @@
 				</section>
 
 				<section class="skills">
-					<article><h2>English</h2></article>
+					<h2>English</h2>
 					<p>
 						B1. Passed Cambridge English Exam in International House Minsk 01/2019
 					</p>
@@ -101,7 +101,7 @@
 
 			<div class="column">
 				<section class="education">
-					<article><h2>Education</h2></article>
+					<h2>Education</h2>
 					<ul class="timeline">
 						<li class="event">
 							<span class="duration">2000 - 2005</span>
@@ -121,7 +121,7 @@
 					</ul>
 				</section>
 				<section class="online education">
-					<article><h2>Online education</h2></article>
+					<h2>Online education</h2>
 					<ul>
 						<li>JavaScript / DOM / Interfaces from https://learn.javascript.ru/</li>
 						<li>HTML academy</li>
@@ -130,8 +130,8 @@
 					</ul>
 				</section>
 				<section class="projects">
-					<article><h2>Code examples & projects</h2></article>
-					<article><h3>Projects</h3></article>
+					<h2>Code examples & projects</h2>
+					<h3>Projects</h3>
 					<p>
 						I’ve completed several projects, but all of them only in
 						<a href="https://web.archive.org/">Internet Archive</a>
@@ -166,7 +166,7 @@
 						</li>
 					</ul>
 				</section>
-				<article><h3>Code example</h3></article>
+				<h3>Code example</h3>
 				<pre><code>
 const array = ['floor', 'wall', 'roof', 'roof']
 const reduceResult = array.reduce((acc, rec, index) => {
