docs: update files

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
 		<main class="resume">
 			<div class="column">
 				<section class="profile">
-					<h1>Igor Marchenko</h1>
-					<p><em>Frontend developer</em></p>
-					<figure>
-						<img src="profile.jpg" alt="Igor Marchenko" />
+					<figure class="student">
+						<figcaption class="student_data">
+							<h1>Igor Marchenko</h1>
+							<h3>Frontend developer</h3>
+						</figcaption>
+
+						<img src="profile.jpg" alt="Igor Marchenko" class="student_pic" />
 					</figure>
 				</section>
 
@@ -74,8 +77,8 @@
 								<li>CMS</li>
 								<li>Node.JS</li>
 								<li>React</li>
-                <li>Panoramic photo</li>
-                <li>Virtual tours</li>
+								<li>Panoramic photo</li>
+								<li>Virtual tours</li>
 							</ul>
 						</li>
 						<li>
