docs: update files

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ const reduceResult = array.reduce((acc, rec, index) => {
 
 				<li>
 					<div class="icon">
-						<a class="link" href="https://youtu.be/"
+						<a class="link" href="https://youtu.be/iC2i1tRl4ds"
 							><i class="fa fa-youtube-play" aria-hidden="true"></i
 						></a>
 					</div>
